Edit StoreController read method